# nextbox-ui-plugin

./: .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yaml  pypi.yml  release.yml
netbox_topology_plugin/: __init__.py  admin.py  models.py  navigation.py  template_content.py  views.py
netbox_topology_plugin/api/: __init__.py  serializers.py  urls.py  views.py
netbox_topology_plugin/migrations/: 0001_initial.py
netbox_topology_plugin/static/netbox_topology_plugin/: button_utils.js  next_app.js
netbox_topology_plugin/templates/netbox_topology_plugin/: site_topo_button.html  site_topo_button_3.x.html  site_topology.html  site_topology_3.x.html  topology.html  topology_3.x.html
nextbox_ui_plugin/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  template_content.py  urls.py  views.py
nextbox_ui_plugin/api/: __init__.py  serializers.py  urls.py  views.py
nextbox_ui_plugin/migrations/: 0001_initial.py
nextbox_ui_plugin/static/nextbox_ui_plugin/: bootstrap.bundle.min.js  button_utils.js  modal.js  next_app.js  topoSphereApp.js
nextbox_ui_plugin/static/nextbox_ui_plugin/topoSphere/: LICENSE-topoSphere  topoSphere.js
nextbox_ui_plugin/templates/nextbox_ui_plugin/: site_topo_button.html  site_topo_button_4.x.html  site_topology.html  site_topology_3.x.html  site_topology_4.x.html  topology.html  topology_3.x.html  topology_4.x.html
(+112 files in other folders)
