[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-topology-plugin"
authors = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"},
    {name = "Igor Korotchenkov", email = "iDebugAll@gmail.com"}
]
maintainers = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"},
]
description = "Netbox Topology Plugin, fork of netbox-topology-plugin.  Powered by NextUI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["netbox-plugin", "netbox-topology"]
version = "0.14.2"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dansheps/netbox-topology-plugin/blob/main/README.md"
Source = "https://github.com/dansheps/netbox-topology-plugin"
Tracker = "https://github.com/dansheps/netbox-topology-plugin/issues"



[tool.setuptools.packages.find]
include=["netbox_topology_plugin*"]
exclude=["netbox_topology_plugin.tests"]